Fixed embedded videos stretching page

--- a/static/less/dash.less
+++ b/static/less/dash.less
@@ -927,6 +927,9 @@ noscript p {
     #top #nav,
     .post.video > iframe,
     .audiobox > iframe,
+    .body iframe,
+    .caption iframe,
+    .description iframe,
     .meta {
         width: 100% !important;
     }
